# Dimes

./: .env  .gitignore  IMPLEMENTATION_GUIDE.md  MIGRATION_SUMMARY.md  New_features_to_implement.md  README.md  fixnow.md  railway.toml  start.sh  start_everything.bat  things_to_fix.md
.cursor/rules/: README.mdc  api-design-guidelines.mdc  architecture-overview.mdc  client-threejs-development.mdc  development-workflow.mdc  project-structure.mdc  server-occt-development.mdc
Docs/: BACKEND_CODE_FLOW.md  IMPLEMENTATION_GUIDE.md  JSON_USAGE_GUIDE.txt  data-flow.md  daydreams035.txt  daydreams037.txt  known-issues.md  llm.md  openapi.yaml
Docs/dreams_examples/: example-basic.ts  example-chat-with-code.ts  example-chat.tsx  example-chroma.ts  example-supabase.ts  package.json
Docs/plans/: 2026-01-30-linear-dimensions-design.md  2026-01-30-linear-dimensions-implementation.md  2026-01-30-sketch-tools-design.md  2026-02-01-constraint-system-design.md  2026-02-01-constraint-system-phase1.md  2026-02-01-constraint-system-phase2.md  2026-02-01-constraint-system-phase3.md  2026-02-01-constraint-system-phase4.md  2026-02-01-constraint-system-phase5.md  2026-02-01-ui-selection-cleanup-design.md
api-server/: .dockerignore  Dockerfile  README.md  env.example  llm.md  package.json
api-server/src/: healthcheck.js  mcp-server.js  server.js
api-server/src/agent/: actions.ts  extension.ts  index.ts  service.ts
api-server/src/agent/actions/: cad.js
api-server/src/agent/contexts/: cad.js
api-server/src/agent/extensions/: cad.js
api-server/src/agent/outputs/: cad.js
api-server/src/agent/services/: cad.js
api-server/src/middleware/: errorHandler.js  sessionValidator.js
api-server/src/routes/: cad.js  health.js
api-server/src/services/: cadBackendClient.js  cppBackendClient.js  websocketManager.js
api-server/src/utils/: errors.js  logger.js
client/: .dockerignore  Dockerfile  README.md  index.html  next.config.ts  package.json  test-api.html  vite.config.ts
client/public/: index.html  simple-test.js  test.html
client/src/: main-test.ts  main.ts
client/src/api/: cad-client.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: bottom-hud.tsx  cad-application.tsx  chat-panel.tsx  command-palette.tsx  controls-panel.tsx  dimension-input.tsx  status-bar.tsx  top-toolbar.tsx  ui-manager.tsx  welcome-overlay.tsx
client/src/controls/: cad-controls.ts
client/src/lib/cad/agent/: agent-manager.ts
client/src/lib/cad/api/: cad-client.ts
client/src/lib/cad/constraints/: constraint-inference.ts  constraint-manager.ts  constraint-renderer.ts  index.ts
client/src/lib/cad/controls/: cad-controls.ts
client/src/lib/cad/dimensions/: dimension-manager.ts  dimension-renderer.ts
client/src/lib/cad/mesh/: mesh-manager.ts
client/src/lib/cad/renderer/: cad-renderer.ts  visualization-manager.ts
client/src/lib/cad/types/: api.ts
client/src/lib/cad/utils/: geometry-utils.ts
client/src/lib/utils/: units.ts
client/src/mesh/: mesh-manager.ts
client/src/renderer/: cad-renderer.ts  visualization-manager.ts
client/src/types/: api.ts  geometry.ts
client/src/ui/: chat-ui.ts  ui-manager.ts
server/: CMakeLists.txt
server/include/api/: cad_controller.h
server/include/export/: file_exporter.h
server/include/geometry/: extrude_feature.h  occt_engine.h  sketch.h  sketch_plane.h  types.h
server/include/json/: json.h
server/include/session/: session_manager.h
server/include/tessellation/: mesh_generator.h
server/src/: main.cpp
server/src/api/: cad_controller.cpp
server/src/export/: file_exporter.cpp
server/src/geometry/: extrude_feature.cpp  occt_engine.cpp  sketch.cpp  sketch_plane.cpp
server/src/geometry/occt_engine.cpp; server/src/api/: cad_controller.cpp
server/src/session/: session_manager.cpp
server/src/tessellation/: mesh_generator.cpp
serverpy/: .dockerignore  .env.example  CONTAINER_SETUP.md  Dockerfile  REWRITE_SUMMARY.md  api_server.py  geometry_engine.py  requirements.txt  session_manager.py  test_cad_api.py
serverpy/app/: environment.yml  requirements.txt
serverpy/app/src/: api_server.py  constraint_equations.py  constraint_solver.py  geometry_engine.py  main.py  test_constraint_solver.py
serverpy/docs/: CONTAINER_SETUP.md
serverpy/src/: api_server.py  docker-compose.yml  dockerfile  geometry_engine.py  main.py
shared/types/: api.ts  constraints.ts  geometry.ts
smart-agent/: index.js  package.json
